@@ -23,7 +23,6 @@ import org.gradle.integtests.fixtures.executer.GradleHandle
 import org.gradle.launcher.daemon.configuration.DaemonBuildOptions
 import org.gradle.test.precondition.Requires
 import org.gradle.test.preconditions.IntegTestPreconditions
-import org.gradle.test.preconditions.UnitTestPreconditions
 
 import static org.gradle.test.fixtures.ConcurrentTestUtil.poll
 
@@ -177,36 +176,6 @@ class AgentApplicationTest extends AbstractIntegrationSpec {
 
         then:
         agentWasApplied()
-    }
-
-    @Requires(
-        value = UnitTestPreconditions.Jdk8OrEarlier,
-        reason = "Java 9 and above needs --add-opens to make environment variable mutation work"
-    )
-    def "foreground daemon respects the feature flag"() {
-        given:
-        executer.tap {
-            requireDaemon()
-            requireIsolatedDaemons()
-        }
-
-        def foregroundDaemon = startAForegroundDaemon(agentStatus)
-        withAgentApplied(agentStatus)
-        withDumpAgentStatusTask()
-
-        when:
-        succeeds()
-
-        then:
-        // Only one (the foreground one) daemon should be present
-        daemons.getRegistry().getAll().size() == 1
-        agentStatusWas(agentStatus)
-
-        cleanup:
-        foregroundDaemon?.abort()
-
-        where:
-        agentStatus << [true, false]
     }
 
     private void withDumpAgentStatusTask() {
